fixed navbar collapse issue, about to begin work on footer

--- a/src/App.css
+++ b/src/App.css
@@ -76,8 +76,11 @@
   border-left: solid var(--second-accent);
 }
 html, body {
-    top:0;
+    /* top:0;
     bottom:0;
     left:0;
     right:0;
+    margin:0;
+    height: 100vh; */
+    background-color: green;
 }
